<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="chleb">chelb</string>
    <string name="ciastka">ciastka</string>
    <string name="jablko">jablko</string>
    <string name="jajka">jajka</string>
    <string name="ketchup">ketchup</string>
    <string name="kielbasa">kielbasa</string>
    <string name="mleko">mleko</string>
    <string name="ogorek">ogorek</string>
    <string name="piwo">piwo</string>
    <string name="pomidor">pomidor</string>
    <string name="ryba">ryba</string>
    <string name="ser">ser</string>
    <string name="woda">woda</string>
    <string name="nazwa">nazwa</string>
    <string name="test_sqlite">Test SQLite</string>
    <string name="Dodano">"Dodano "</string>
    <string name="lista">" do listy"</string>
    <string name="dodaj_produkt">Dodaj produkt</string>
    <string name="start_text">Stwórz swoją pierwszą listę, zaplanuj zakupy szybciej i wygodniej</string>
    <string name="nowa_lista_tv">Nazwa listy</string>
    <string name="nowa_lista_et">Nowa lista</string>
    <string name="tv_utworz_liste">UTWÓRZ</string>
    <string name="tv_nazwa_listy">Nazwa Listy</string>
    <string name="tv_slogan_label">Zacznij dodawać produkty szybko i wygodnie, użyj czujnika zbliżeniowego</string>
    <string name="toast_komunikat_dodania">Produkt został już dodany do listy</string>
    <string name="toast_dodadno">"Dodano produkt "</string>
    <string name="toast_do_listy">" do listy"</string>
    <string name="bt_gotowe_label">GOTOWE</string>
    <string name="name_list_label">Lista Produtów:</string>
    <string name="tv_suma_label">Suma:</string>
</resources>
