<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mario.testimagesql.controller.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/et_nameProducts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/dodaj_produkt"
            android:textSize="16sp"
            android:lines="1"/>

        <ImageView
            android:id="@+id/iv_chcekmark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/test_sqlite"
            android:layout_weight="1"
            android:textSize="16sp"
            android:src="@drawable/checkmark"
            android:scaleType="matrix"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_go_to_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_gotowe_label"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        />

    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/ListViewProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>
