<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F40E5">

    <ImageView
        android:id="@+id/iv_view_close"
        android:layout_margin="@dimen/value_of_margin"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/close"/>

    <LinearLayout
        android:layout_margin="@dimen/value_of_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nazwa_listy"
            android:layout_marginLeft="@dimen/value_of_margin"
            android:layout_marginTop="@dimen/value_of_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nowa_lista_tv"
            android:textSize="@dimen/text_size_normall"
            android:visibility="invisible"
            android:textColor="@color/colorElementsInAddNewListXML"/>

        <EditText
            android:id="@+id/et_nazwa_listy"
            android:layout_marginLeft="@dimen/value_of_margin"
            android:layout_marginBottom="@dimen/value_of_margin"
            android:layout_marginRight="@dimen/value_of_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nowa_lista_et"
            android:textSize="20sp"
            android:maxLength="23"
            android:lines="1"
            android:maxLines="1"
            />

        <TextView
            android:id="@+id/tv_createList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorElementsInAddNewListXML"
            android:text="@string/tv_utworz_liste"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/value_of_margin"
            android:layout_marginRight="@dimen/value_of_margin"
            android:textSize="18sp"
            />

    </LinearLayout>

</LinearLayout>